// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ CodeCoverageSort ]] renders CodeCoverageSort with all prop options: {"coverageFilters":{"lcv-asc":{"label":"LINE COVERAGE","icon":"arrow-up","name":"lcv-asc"},"lcv-desc":{"label":"LINE COVERAGE","icon":"arrow-down","name":"lcv-desc"}},"coverageType":"lcv","defaultLabel":"Line Coverage","selectedCoverageSortFilter":""} 1`] = `
"<z-badge type=\\"success\\" size=\\"sm\\">
  <zbutton-stub button-type=\\"ghost\\" size=\\"x-small\\" color=\\"vanilla-400\\" class=\\"\\">
    <div class=\\"flex items-center gap-x-2 font-semibold\\"><span class=\\"uppercase\\">Line Coverage</span>
      <zicon-stub icon=\\"arrow-up-down\\"></zicon-stub>
    </div>
  </zbutton-stub>
</z-badge>"
`;

exports[`[[ CodeCoverageSort ]] renders CodeCoverageSort with all prop options: {"coverageFilters":{"lcv-asc":{"label":"LINE COVERAGE","icon":"arrow-up","name":"lcv-asc"},"lcv-desc":{"label":"LINE COVERAGE","icon":"arrow-down","name":"lcv-desc"}},"coverageType":"lcv","defaultLabel":"Line Coverage","selectedCoverageSortFilter":"lcv-asc"} 1`] = `
"<z-badge type=\\"success\\" is-dot=\\"true\\" size=\\"sm\\">
  <zbutton-stub button-type=\\"ghost\\" size=\\"x-small\\" color=\\"vanilla-100\\" class=\\"bg-ink-200 hover:bg-ink-100\\">
    <div class=\\"flex items-center gap-x-2 font-semibold\\"><span class=\\"uppercase\\">LINE COVERAGE</span>
      <zicon-stub icon=\\"arrow-up\\"></zicon-stub>
    </div>
  </zbutton-stub>
</z-badge>"
`;

exports[`[[ CodeCoverageSort ]] renders CodeCoverageSort with all prop options: {"coverageFilters":{"lcv-asc":{"label":"LINE COVERAGE","icon":"arrow-up","name":"lcv-asc"},"lcv-desc":{"label":"LINE COVERAGE","icon":"arrow-down","name":"lcv-desc"}},"coverageType":"lcv","defaultLabel":"Line Coverage","selectedCoverageSortFilter":"lcv-desc"} 1`] = `
"<z-badge type=\\"success\\" is-dot=\\"true\\" size=\\"sm\\">
  <zbutton-stub button-type=\\"ghost\\" size=\\"x-small\\" color=\\"vanilla-100\\" class=\\"bg-ink-200 hover:bg-ink-100\\">
    <div class=\\"flex items-center gap-x-2 font-semibold\\"><span class=\\"uppercase\\">LINE COVERAGE</span>
      <zicon-stub icon=\\"arrow-down\\"></zicon-stub>
    </div>
  </zbutton-stub>
</z-badge>"
`;
